--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>🔐</title>
     <link href="css/flex.css" type="text/css" rel="stylesheet" />
     <link href="css/style.css" type="text/css" rel="stylesheet" />
     <script src="java/javascript.js"></script>
 </head>
 <body>
-    
+    <input type="input" id="passwordInput">
+    <button id ="specialButton" onclick="generalFunction()">OOGA BOOGA</button>
 </body>
 </html>
