--- a/index.html
+++ b/index.html
@@ -4,13 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>🔐</title>
+    <title>🔐🐄</title>
     <link href="css/flex.css" type="text/css" rel="stylesheet" />
     <link href="css/style.css" type="text/css" rel="stylesheet" />
     <script src="java/javascript.js"></script>
 </head>
 <body>
-    <input type="input" id="passwordInput">
-    <button id ="specialButton" onclick="generalFunction()">OOGA BOOGA</button>
+    <div class="db1"></div>
+    <div class="db8">
+        <div class="column busy">
+            <div>
+                <div class="row center">
+                    <img src="css/media/moologo.gif" alt="">
+                </div>
+                <div class="row txt-center">
+                    <p id="t1">Sign up to see photos and videos of famous cows</p>
+                </div>
+            </div>
+            <input type="input" id="" placeholder="Email">
+            <input type="input" id="" placeholder="Full name">
+            <input type="input" id="" placeholder="Username">
+            <input type="input" id="passwordInput" placeholder="Password">
+            <button id ="specialButton" onclick="generalFunction()">Sign Up</button>
+            <br><br>
+            <div class="row txt-center">
+                <span id="">By signing up, you agree to our <a href="">Terms & Conditions</a>, <a href="">Privacy Policy</a>, and <a href="">Cult Commandments</a></span>
+            </div>
+        </div>
+    </div>
+    <div class="db1">
+        <!--footer>
+            <p>here</p>
+        </footer-->
+    </div>
 </body>
 </html>
