--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@
             <input type="input" id="passwordInput" placeholder="Password">
             <button id ="specialButton" onclick="generalFunction()">Sign Up</button>
             <div class="column txt-center">
-                <span class="war" id="notice-min">Create a password with at least 8 characters</span>
-                <span class="war" id="notice-max">Create a password with less than 21 characters</span>
-                <span class="war" id="notice-special">Include a special character (#, !, @, $, %, &)</span>
-                <span class="war" id="notice-space">Passwords cannot contain spaces</span>
-                <span class="war" id="notice-num">Password should have at least one number</span>
-                <span class="war" id="notice-upCase">Password should have at least 1 capital letter</span>
-                <span class="war" id="notice-loCase">Password should have at least 1 lowercase letter</span>
+                <p class="war" id="notice-minMax">Create a password between 8 and 20 characters</p>
+                <p class="war" id="notice-special">Include a special character (#, !, @, $, %, &)</p>
+                <p class="war" id="notice-space">Passwords cannot contain spaces</p>
+                <p class="war" id="notice-num">Password should have at least one number</p>
+                <p class="war" id="notice-upCase">Password should have at least 1 capital letter</p>
+                <p class="war" id="notice-loCase">Password should have at least 1 lowercase letter</p>
 
                 <div class="row terms">
                     <span>By signing up, you agree to our <a href="">Terms & Conditions</a>, <a href="">Privacy Policy</a>, and <a href="">Cult Commandments</a></span>
