--- a/main.html
+++ b/main.html
@@ -10,6 +10,13 @@
     <script src="java/javascript.js"></script>
 </head>
 <body>
-    
+    <header>
+        <div class="db3">
+
+        </div>
+        <div class="db4">
+            
+        </div>
+    </header>
 </body>
 </html>
