--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                     <p id="t1">Sign up to see photos and videos of famous cows</p>
                 </div>
             </div>
-            <input type="input" id="" placeholder="Email">
-            <input type="input" id="" placeholder="Full name">
-            <input type="input" id="" placeholder="Username">
+            <input type="email" id="" placeholder="Email" required>
+            <input type="input" id="" placeholder="Full name" required>
+            <input type="input" id="" placeholder="Username" required>
             <input type="input" id="passwordInput" placeholder="Password">
             <button id ="specialButton" onclick="generalFunction()">Sign Up</button>
             <div class="column txt-center">
