--- a/main.html
+++ b/main.html
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>🐮 Moo!</title>
-    <link href="css/flex.css" type="text/css" rel="stylesheet" />
-    <link href="css/style.css" type="text/css" rel="stylesheet" />
-    <script src="java/javascript.js"></script>
 </head>
+<style>
+    html { 
+        background: url("https://media1.giphy.com/media/RJhasN5Konz6an51Vs/giphy.gif") no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+}
+</style>
 <body>
-    <header>
-        <div class="db3">
 
-        </div>
-        <div class="db4">
-            
-        </div>
-    </header>
 </body>
 </html>
