--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <script src="java/javascript.js"></script>
 </head>
 <body>
-    <div class="db1"></div>
-    <div class="db8">
         <div class="column busy">
             <div>
                 <div class="row center">
@@ -47,20 +45,12 @@
             <div class="txt-center">
                 <br>
                 <p>Download the app.</p>
-                <div class="row">
-                    <div class="db3"></div>
-                    <div class="db2">
-                        <a><img src="css/media/apst.png" width="100%"></a>
-                    </div>
-                    <div class="db2">
-                        <a><img src="css/media/gopl.png" width="100%"></a>
-                    </div>
-                    <div class="db3"></div>
+                <div class="this">
+                    <a><img id="socL" src="css/media/apst.png"></a>
+                    <a><img id="socR" src="css/media/gopl.png"></a>
                 </div>
             </div>
         </div><!--db8-->
-    </div>
-    <div class="db1">
     </div>
 </body>
 </html>
