--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="gam1087.png">
     <title>🐮 Moo!</title>
 </head>
 <style>
@@ -13,6 +14,7 @@
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
+        cursor: url(../cur1002.cur), auto !important; 
 }
 </style>
 <body>
